src/objects/User_Story__c.object
<CustomObject>
    <description>Feature Request is used for developing requirements.  The requirements would be in the form of user stories and defects and Test Cases can be tagged along with the feature requests</description>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <label>Actual Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backlog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the user story is assigned to a Parent Milestone or no milestone, then the user story will be marked as a backlog And If the user story is assigned to the child milestone then the backlog checkbox is unchecked.</description>
        <label>Backlog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blocked_Reason__c</fullName>
        <label>Blocked Reason</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Feature_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feature_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Feature Request</label>
        <referenceTo>User_Story__c</referenceTo>
        <relationshipName>Feature_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone1_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>Milestone1_Milestone__c</referenceTo>
        <relationshipLabel>User Stories (Milestone)</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>Milestone1_Milestone__c</referenceTo>
        <relationshipName>Feature_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>User Story</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the feature request</description>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Feature_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Estimates__c</fullName>
        <description>Planned Estimate Points</description>
        <label>Planned Estimate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the feature request</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>RFQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quoted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package Validated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>User Story</label>
    <nameField>
        <displayFormat>FR-{00000000}</displayFormat>
        <label>Feature Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>